# poseidon

./: .gitignore  LICENSE  Makefile  README.md  requirements.txt
.github/workflows/: ci.yml
artifacts/: cico_rp10_cost_gate.json  cico_rp10_relaxed_baseline.json  collision_nogo.json  custom_mds_scout_round1.json  density_scout_null.json  fast_resultant_scaling_probe.json  zerotest_rf4rp5_coordinate_witness.json  zerotest_rf6_resultant_gate.json
core_rs/: Cargo.toml  README.md
core_rs/src/: bipoly.rs  cico.rs  golden_data.rs  lib.rs  poly.rs  zerotest.rs
core_rs/tests/fixtures/: rf4_rp5_var0_first_64.csv
paper/: README.md  poseidon2026-kb.tex  refs.bib
poseidon_attack/: README.md  __init__.py  cico_attack.py  constants.py  field.py  poly.py  poseidon1.py  verifiers.py
reference/poseidon-tools/: .gitignore  VENDORED_COMMIT.txt
reference/poseidon-tools/bounties/: partial_collision_verifier.py
reference/poseidon-tools/bounties/submissions/: partial_collisions.py
submission/: README.md  verify_with_official.py
submission/examples/: bad_cico.json  bad_zerotest.json  good_zerotest_rf4_rp5.json
tests/: extract_golden.py  golden_vectors.json  profile_density_decode.py  test_cico_attack.py  test_golden.py  test_poly.py  test_skip_and_gcd.py
tests/fixtures/mds/: README.md  cauchy_default.json  cauchy_variant_seed0.json  plonky3_circulant.json
